Solver results added to the results <div>.
Had to increase its font size because it was too small.

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -50,11 +50,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
 
         & p
         {
-            font-size: 1rem;
+            font-size: 1.5rem;
             text-align: center;
+            padding: 0.25rem;
+            margin: 0;
         }
     }
 }
